refactor: 메뉴판 재구성 및 메뉴 상세정보 조회 api 로직 개선